# azulRL

./: .gitignore  LICENSE  README.md  azul_game.py  azul_game_debugger.py  pyproject.toml  requirements.txt  run_server.py  sandbox.py  start_backend.py  start_backend_dev.sh
.claude/: settings.global.json  summary.txt
src/azul/: components.py  data_model.py  game.py  game_state.py
src/azul/board_components/: __init__.py  bag.py  boardcenter.py  factory.py  floorline.py  playerboard.py  stagingline.py  tileholder.py  wall.py
src/azul/game/: state_machine.py
src/azul/tile/: __init__.py  tile.py  tile_generator.py
src/backend/: __init__.py  main.py  models.py  session_manager.py
src/backend/routers/: __init__.py  health.py  sessions.py  websocket.py
tests/: conftest.py
tests/backend/: test_backend_integration.py
tests/shared/: __init__.py  tile_fixtures.py
tests/unit/: test_game.py  test_game_json_serialization.py  test_models.py  test_tile.py  test_tile_generator.py  test_tileholder.py
viz/: index.html  package.json  vite.config.ts  viz.code-workspace
viz/components/: MyComponent.tsx
viz/src/: App.css  App.tsx  styles.css  utils.ts
viz/src/components/: BoardCenter.css  BoardCenter.tsx  FactoryCard.css  FactoryCard.tsx  FactoryPanel.css  FactoryPanel.tsx  GameBoard.tsx  Header.css  Header.tsx  HomePage.css  HomePage.tsx  PlayerBoard.css  PlayerBoard.tsx  TileComponent.css  TileComponent.tsx  TilePlaceholder.css  TilePlaceholder.tsx
viz/src/constants/: colors.ts
viz/src/stores/: GameStore.tsx
viz/src/types/: Factory.ts  GameAction.ts  GameState.ts  PatternLine.ts  PlayerBoard.ts  Tile.ts  TilePlaceholder.ts
