[tool.poetry]
name = "azulrl"
version = "0.1.0"
description = ""
authors = ["Stefan Wanckel <stefanwanckel@gmail.com>"]
readme = "README.md"
packages = [{include = "azul", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
strenum = "^0.4.15"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.0"
python-statemachine = {extras = ["diagrams"], version = "^2.5.0"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Markers
markers = [
    "unit: Unit tests - test individual components in isolation",
    "integration: Integration tests - test component interactions",
    "slow: Tests that take longer to run"
]

# Output configuration
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings"
]

# Minimum version
minversion = "6.0"

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
